--- a/res/layout/activity_launcher.xml
+++ b/res/layout/activity_launcher.xml
@@ -132,12 +132,7 @@
 			</LinearLayout>
 		</ScrollView>
 	</LinearLayout>
-	<com.google.android.gms.ads.AdView
-		android:id="@+id/adView"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		ads:adSize="BANNER"
+       <LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="50dp"
 		android:background="#444444"
@@ -156,4 +151,3 @@
 		</Button>
 	</LinearLayout>
 </LinearLayout>
-
